# ia-agent-calendar

./: README.md  pyproject.toml  report.md  training_data.pkl
src/virtualasistant/: crew.py  main.py
src/virtualasistant/config/: agents.yaml  tasks.yaml
src/virtualasistant/tools/: __init__.py  custom_tool.py
